# cpp-inventory-cli

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
